@@ -38,6 +38,7 @@ other changes
 * gtags: the -i option also locate tag files among cadedite directories.
 * global, gtags: make icase_path allways enable in Windows32 environment.
 * global: the -T(--through) option added.
+* gtags, htags: --gtagsconf option added.
 
 Version 4.0.1 - September 26, 2000, by Shigio Yamaguchi
 
